Working on Titles

--- a/portfolio /index.html
+++ b/portfolio /index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gustavo Salas</title>
+    <title>Gustavo Rodriguez Salas</title>
     <link href="static/css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Questrial|Raleway:100, 700" rel="stylesheet">
   </head>
